# rsomics-wiener-index

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: wiener.rs
src/: main.rs
tests/: compat.rs
