[package]
name = "rsomics-wiener-index"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Wiener index of an undirected graph — value-exact port of networkx.wiener_index"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "graph", "wiener", "network"]
categories = ["science", "command-line-utilities"]
repository = "https://github.com/omics-rust/rsomics-wiener-index"

[[bin]]
name = "rsomics-wiener-index"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[[bench]]
name = "wiener"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]
